--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,9 +3,16 @@
 <body>
     {% block content %}
         {% for post in posts %}
-            <h3>author is {{ post.author }}</h3>
-            <p>created at {{ post.created_at }}</p>
-            <p>{{ post.content }}</p>
+            <article class="media content-section">
+              <div class="media-body">
+                <div class="article-metadata">
+                  <a class="mr-2" href="#">{{ post.author }}</a>
+                  <small class="text-muted">{{ post.date_posted }}</small>
+                </div>
+                <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+                <p class="article-content">{{ post.content }}</p>
+              </div>
+            </article>
         {% endfor %}
     {% endblock content %}
 </body>
