--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,7 +14,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #4267b2">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Basefook</a>
+          <a class="navbar-brand mr-5" id="site" href="{% url 'blog-home' %}">Bf</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -25,8 +25,8 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" id="login" href="#">Login</a>
-              <a class="nav-item nav-link" href="#">Register</a>
+              <a class="nav-item nav-link" href="#">Login</a>
+              <a class="nav-item nav-link" id="register" href="#">Register</a>
             </div>
           </div>
         </div>
