--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,7 +7,7 @@
               <div class="media-body">
                 <div class="article-metadata">
                   <a class="mr-2" href="#">{{ post.author }}</a>
-                  <small class="text-muted">{{ post.date_posted }}</small>
+                  <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
                 </div>
                 <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
                 <p class="article-content">{{ post.content }}</p>
