--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,23 +1,23 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
-<title>Sign Up</title>
+<title>Log In</title>
     {% block content %}
         <div class="content-section">
             <form method="post">
                 {% csrf_token %}
                 <fieldset class="form-group">
-                    <legend class="border-bottom mb-4"> Sign Up </legend>
+                    <legend class="border-bottom mb-4"> Log In </legend>
                         {{ form|crispy }}
                 </fieldset>
                 <div class="form-group">
                     <button class="btn btn-outline-info" type="submit">
-                        Sign Up
+                        Login
                     </button>
                 </div>
             </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already Have An Account? <a href="{% url 'login' %}" class="ml-2">Sign In</a>
+                Dont Have An Account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
             </small>
         </div>
         </div>
