--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,6 +4,7 @@
     {% block content %}
         {% for post in posts %}
             <article class="media content-section">
+                <img src="{{ post.author.profile.image.url }}" class="rounded-circle article-img" alt="">
               <div class="media-body">
                 <div class="article-metadata">
                   <a class="mr-2" href="#">{{ post.author }}</a>
