--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -10,6 +10,18 @@
               <p class="text-secondary">{{ user.email }}</p>
             </div>
           </div>
-          <!-- FORM HERE -->
+          <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4"> Profile Info </legend>
+                        {{ u_form|crispy }}
+                        {{ p_form|crispy }}
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-outline-info" type="submit">
+                        Update
+                    </button>
+                </div>
+            </form>
         </div>
     {% endblock content %}
