--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,5 +1,5 @@
 {% extends "blog/base.html" %}
-<title>Logged Out</title>
+{% block title %}Logged Out{% endblock %}
     {% block content %}
         <h2>Logged Out Successfully</h2>
         <div class="border-top pt-3">
