--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
-<title>Your Profile</title>
+{% block title %} Your Profile {% endblock %}
     {% block content %}
         <div class="content-section">
           <div class="media">
