--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,5 +1,5 @@
 {% extends "blog/base.html" %}
-<title>About</title>
+{% block title %} About {% endblock %}
     {% block content %}
         <h1>About</h1>
     {% endblock content %}
