--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,24 +1,19 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
-<{% block title %} Login {% endblock %}
+{% block title %} Blog Post {% endblock %}
     {% block content %}
         <div class="content-section">
             <form method="post">
                 {% csrf_token %}
                 <fieldset class="form-group">
-                    <legend class="border-bottom mb-4"> Log In </legend>
+                    <legend class="border-bottom mb-4"> Blog Post </legend>
                         {{ form|crispy }}
                 </fieldset>
                 <div class="form-group">
                     <button class="btn btn-outline-info" type="submit">
-                        Login
+                        Post
                     </button>
                 </div>
             </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Don't Have An Account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
-            </small>
-        </div>
         </div>
     {% endblock content %}
