--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
-<title>Sign Up</title>
+{% block title %} Sign Up {% endblock %}
     {% block content %}
         <div class="content-section">
             <form method="post">
