added individual user post view

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,7 +6,7 @@
                 <img src="{{ post.author.profile.image.url }}" class="rounded-circle article-img" alt="">
               <div class="media-body">
                 <div class="article-metadata">
-                  <a class="mr-2" href="#">{{ post.author }}</a>
+                  <a class="mr-2" href="{% url 'user-post' post.author.username %}">{{ post.author }}</a>
                   <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
                     {% if post.author == user %}
                         <div>
