--- a/blog/templates/blog/user_post.html
+++ b/blog/templates/blog/user_post.html
@@ -2,6 +2,7 @@
 {% block title %} Home {% endblock %}
 <body>
     {% block content %}
+        <h1 class="mb-3">Post By {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
         {% for post in posts %}
             <article class="media content-section">
                 <img src="{{ post.author.profile.image.url }}" class="rounded-circle article-img" alt="">
