added minor changes

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -2,4 +2,14 @@
 {% block title %} About {% endblock %}
     {% block content %}
         <h1>About</h1>
+        <h4 class="article-title">
+            This is bacefook version 1.0.0 ;)
+            <div class="media-body">
+                <div class="article-content">
+                    I am an undergraduate studying Chemical Science and Technology at Indian Institute of Technology, Guwahati. I am interested in Software Development with a major interest in web apps and web development. Checkout out my projects at Github.
+
+                    Currently i have no industrial experiance but i am looking forward to it. I have decent knowledge of frontend using reactjs and backend using django. I also like gaming and my game name is Gamechanger and also like watching supense and thriller movies.
+                </div>
+            </div>
+        </h4>
     {% endblock content %}
